--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,9 @@
-source.. = src/
+source.soareditor.jar = src/
 bin.includes = plugin.xml,\
                META-INF/,\
+               icons/,\
                lib/,\
-               lib/jacl.jar,\
-               lib/tcljava.jar
-jars.compile.order = .
-src.includes = META-INF/
+               resources/,\
+               soareditor.jar
+jars.compile.order = soareditor.jar
+bin.excludes = resources/.templates.soar.swp
