New update site build, added toggle comment action

--- a/Editor/plugin.xml
+++ b/Editor/plugin.xml
@@ -20,6 +20,65 @@
             name="Datamap Editor">
       </editor>
 	</extension>
+	
+	  <extension
+        point="org.eclipse.ui.contexts">
+     <context
+           description="Editing Soar Source Context"
+           id="edu.umich.soar.editor.contexts.soarEditorScope"
+           name="Editing Soar Source"
+           parentId="org.eclipse.ui.contexts.window"/>
+  </extension>
+	<extension
+        point="org.eclipse.ui.commands">
+     <category
+           description="Commands for editing Soar source code."
+           id="edu.umich.soar.editor.commands.soarsource"
+           name="Soar Source"/>
+           <!--
+     <command
+           categoryId="edu.umich.soar.editor.commands.soarsource"
+           description="Comments out the selected lines"
+           id="edu.umich.soar.editor.commands.comment"
+           name="Soar Comment"/>
+           -->
+     <command
+           categoryId="edu.umich.soar.editor.commands.soarsource"
+           description="Toggles Soar comments"
+           id="edu.umich.soar.editor.commands.togglecomment"
+           name="Toggle Soar Comments"/>
+           <!--
+     <command
+           categoryId="edu.umich.soar.editor.commands.soarsource"
+           description="Uncomments the selected lines"
+           id="edu.umich.soar.editor.commands.uncomment"
+           name="Soar Uncomment"/>
+           -->
+  </extension>
+  <extension
+        point="org.eclipse.ui.bindings">
+      <!--  win32:  M1=CTRL,    M2=SHIFT, M3=ALT, M4=-
+            carbon: M1=COMMAND, M2=SHIFT, M3=ALT, M4=CTRL -->
+            
+     <key
+           commandId="edu.umich.soar.editor.commands.togglecomment"
+           contextId="edu.umich.soar.editor.contexts.soarEditorScope"
+           schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+           sequence="M1+/"/>
+           <!--
+     <key
+           commandId="edu.umich.soar.editor.commands.comment"
+           contextId="edu.umich.soar.editor.contexts.soarEditorScope"
+           schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+           sequence="M3+/"/>
+     <key
+           commandId="edu.umich.soar.editor.commands.uncomment"
+           contextId="edu.umich.soar.editor.contexts.soarEditorScope"
+           schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+           sequence="M3+\"/>
+           -->
+  </extension>
+	
 	<!--
 	
 		<extension point="org.eclipse.ui.decorators"> 
