--- a/Editor/plugin.xml
+++ b/Editor/plugin.xml
@@ -35,25 +35,16 @@
            description="Commands for editing Soar source code."
            id="edu.umich.soar.editor.commands.soarsource"
            name="Soar Source"/>
-           <!--
-     <command
-           categoryId="edu.umich.soar.editor.commands.soarsource"
-           description="Comments out the selected lines"
-           id="edu.umich.soar.editor.commands.comment"
-           name="Soar Comment"/>
-           -->
      <command
            categoryId="edu.umich.soar.editor.commands.soarsource"
            description="Toggles Soar comments"
            id="edu.umich.soar.editor.commands.togglecomment"
            name="Toggle Soar Comments"/>
-           <!--
      <command
            categoryId="edu.umich.soar.editor.commands.soarsource"
-           description="Uncomments the selected lines"
-           id="edu.umich.soar.editor.commands.uncomment"
-           name="Soar Uncomment"/>
-           -->
+           description="Formats Soar Code"
+           id="edu.umich.soar.editor.commands.format"
+           name="Format Soar Code"/>
   </extension>
   <extension
         point="org.eclipse.ui.bindings">
@@ -65,18 +56,11 @@
            contextId="edu.umich.soar.editor.contexts.soarEditorScope"
            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
            sequence="M1+/"/>
-           <!--
      <key
-           commandId="edu.umich.soar.editor.commands.comment"
+           commandId="edu.umich.soar.editor.commands.format"
            contextId="edu.umich.soar.editor.contexts.soarEditorScope"
            schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-           sequence="M3+/"/>
-     <key
-           commandId="edu.umich.soar.editor.commands.uncomment"
-           contextId="edu.umich.soar.editor.contexts.soarEditorScope"
-           schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
-           sequence="M3+\"/>
-           -->
+           sequence="M1+M3+/"/>
   </extension>
 	
 	<!--
